--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,8 +18,8 @@ body,html.:root {
     --popover: 0 0% 100%;
     --popover-foreground: 224 71.4% 4.1%;
  
-    --primary: 220.9 39.3% 11%;
-    --primary-foreground: 210 20% 98%;
+    --primary: #FFF400;
+    --primary-foreground: #0f0f0f;
  
     --secondary: 220 14.3% 95.9%;
     --secondary-foreground: 220.9 39.3% 11%;
